Updating images and styles.

--- a/index.html
+++ b/index.html
@@ -12,6 +12,16 @@
   </head>
 
   <body>
+    <div>
+    <nav class="navbar">
+      <a href="#" class="nav-link">Home</a>
+      <a href="#" class="nav-link">Dashboards</a>
+      <a href="#" class="nav-link" id="ask-sharky-link">Ask Sharky</a>
+      <div class="nav-profile">
+        <a href="#" class="nav-link">Profile</a>
+        <img src="https://img.icons8.com/emoji/48/shark-emoji.png" alt="Sharky" class="shark-img" />
+      </div>
+    </nav>
     <div id="app"></div>
 
     <script src="./index.js" type="module"></script>
